chore: Refactor and codebase cleanup based on ktlint and detekt findings